testsuite/tests/properties/invalid_block_expr/test.out
== extra_expr/test.lkt ==
test.lkt:6:9: error: In a block expression, the inner expression must be at the end of the block
6 |         false
  |         ^^^^^


== misplaced_expr/test.lkt ==
test.lkt:5:9: error: In a block expression, the inner expression must be at the end of the block
5 |         false
  |         ^^^^^


== missing_expr/test.lkt ==
test.lkt:4:31: error: Inner expression missing in this block
4 |     @exported fun p(): Bool = {


lkt_compile: Done
